--- a/templates/crud/create.html.twig
+++ b/templates/crud/create.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 <form method="POST" action="{{ path('create_crud') }}">
-    <input name="LastName" type="text"">
-    <input name="FirstName" type="text"">
+    <input name="LastName" type="text">
+    <input name="FirstName" type="text">
     <input name="Age" type="number">
     <input name="Status" type="text">
     <input name="Email" type="text">
